istiolabs/egress-tls/service-entry-cnn-dot-com.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  naem: edition-cnn-com
spec:
  hosts:
  - edition.cnn.com
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
  - number: 443
    name: https-port
    protocol: HTTPS
  resolution: DNS
